--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8">
-  <title>Page Title</title>
+  <title>Shopping Cart</title>
   
   <body>
 
-    <h1>Other Page</h1>
+    <div class="logo">
 
-    <p>
-        Hello!
-    </p>
+      <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="200px"></img>
+      </div>
+  
+      <hr class="solid">
+  
+      <div class="navigation">
+        <br>PRODUCTS
+        <br>CART
+      </div>
 
+      
   </body>
 </html>
