--- a/solution-hw1/productgallery.html
+++ b/solution-hw1/productgallery.html
@@ -7,7 +7,7 @@
 
     <div class="logo">
 
-    <img src="/assets/products/apple-cinnamon-roll.jpg"></img>
+    <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="200px alt="logo"></img>
     </div>
 
     <hr class="solid">
@@ -19,6 +19,61 @@
 
     <div class="products">
       <h2>Our hand-made cinnamon rolls</h2>
+
+      <div class="item">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="300px" alt="original cinnamon roll">
+        <p>
+          Original Cinammon Roll 
+          <br>
+          $2.49
+        </p>
+      </div>
+
+      <div class="item">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/apple-cinnamon-roll.jpg" width="300px" alt="apple cinnamon roll">
+        <p>
+          Apple Cinammon Roll 
+          <br>
+          $3.49
+        </p>
+      </div>
+
+      <div class="item">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/raisin-cinnamon-roll.jpg" width="300px" alt="raisin cinnamon roll">
+        <p>
+          Raisin Cinammon Roll 
+          <br>
+          $2.99
+        </p>
+      </div>
+
+      <div class="item">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/walnut-cinnamon-roll.jpg" width="300px" alt="walnut cinnamon roll">
+        <p>
+          Walnut Cinammon Roll 
+          <br>
+          $3.49
+        </p>
+      </div>
+
+      <div class="item">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="300px" alt="double-chocolate cinnamon roll">
+        <p>
+          Double-chocolate Cinnamon Roll
+          <br>
+          $3.49
+        </p>
+      </div>
+
+      <div class="item">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/strawberry-cinnamon-roll.jpg" width="300px" alt="strawberry cinnamon roll">
+        <p>
+          Strawberry Cinnamon Roll
+          <br>
+          $3.99
+        </p>
+      </div>
+
     </div>
 
   </body>
