--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -7,7 +7,7 @@
 
     <div class="logo">
 
-      <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="200px"></img>
+      <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="200px" alt="logo"/>
       </div>
   
       <hr class="solid">
@@ -17,6 +17,38 @@
         <br>CART
       </div>
 
-      
+      <h2>Shopping Cart</h2>
+
+      <div class="purchase">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="90px" alt="original cinnamon roll"/>
+        <br>Remove
+        <p>
+          Original Cinammon Roll 
+          <br>
+          Glazing: Keep Original 
+          <br>
+          Pack Size: 1
+          <p>
+           $2.49
+        </p>
+        </p>
+      </div>
+
+      <div class="purchase">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="90px" alt="double-chocolate cinnamon roll"/>
+        <br>Remove
+        <p>
+          Double Chocolate Cinammon Roll 
+          <br>
+          Glazing: Sugar Milk
+          <br>
+          Pack Size: 2
+          <p>
+           $2.49
+        </p>
+        </p>
+      </div>
+
+
   </body>
 </html>
