--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,74 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
   <meta charset="UTF-8">
   <title>Product Gallery</title>
+
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+
+  </head>
   
   <body>
 
     <div class="logo">
-
-    <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="200px alt="logo"></img>
+      <a href="index.html">
+    <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+  </a>
     </div>
 
     <hr class="solid">
 
-    <div class="navigation">
-      <br>PRODUCTS
-      <br>CART
-    </div>
+    <nav>
+      <br><a href="index.html">PRODUCTS</a>
+      <br><a href="shoppingcart.html">CART</a>
+    </nav>
+
 
     <div class="products">
       <h2>Our hand-made cinnamon rolls</h2>
 
-      <div class="item">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="300px" alt="original cinnamon roll"/>
+      <div class="item"> <a href="productdetail.html"> 
+        <a href="productdetail.html">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
+        </a>
         <p>
+          <a href="productdetail.html">
           Original Cinammon Roll 
+        </a>
           <br>
           $2.49
         </p>
       </div>
 
-      <div class="item">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/apple-cinnamon-roll.jpg" width="300px" alt="apple cinnamon roll"/>
+      <div class="item"> <a href="productdetail.html">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
+        </a>
         <p>
+          <a href="productdetail.html">
           Apple Cinammon Roll 
+        </a>
           <br>
           $3.49
         </p>
       </div>
 
-      <div class="item">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/raisin-cinnamon-roll.jpg" width="300px" alt="raisin cinnamon roll"/>
+      <div class="item"> <a href="productdetail.html">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/raisin-cinnamon-roll.jpg" width="400px" alt="raisin cinnamon roll"/>
+        </a>
         <p>
+          <a href="productdetail.html">
           Raisin Cinammon Roll 
+        </a>
           <br>
           $2.99
         </p>
       </div>
 
-      <div class="item">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/walnut-cinnamon-roll.jpg" width="300px" alt="walnut cinnamon roll"/>
+      <div class="item"> <a href="productdetail.html">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/walnut-cinnamon-roll.jpg" width="400px" alt="walnut cinnamon roll"/>
+        </a>
         <p>
+          <a href="productdetail.html">
           Walnut Cinammon Roll 
+          </a>
           <br>
           $3.49
         </p>
       </div>
 
-      <div class="item">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="300px" alt="double-chocolate cinnamon roll"/>
+      <div class="item"> <a href="productdetail.html">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="400px" alt="double-chocolate cinnamon roll"/>
+        </a>
         <p>
+          <a href="productdetail.html">
           Double-chocolate Cinnamon Roll
+        </a>
           <br>
           $3.49
         </p>
       </div>
 
-      <div class="item">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/strawberry-cinnamon-roll.jpg" width="300px" alt="strawberry cinnamon roll"/>
+      <div class="item"> <a href="productdetail.html">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/strawberry-cinnamon-roll.jpg" width="400px" alt="strawberry cinnamon roll"/>
+        </a>
         <p>
-          Strawberry Cinnamon Roll
+          <a href="productdetail.html">Strawberry Cinnamon Roll</a>
           <br>
           $3.99
         </p>
