--- a/solution-hw1/productdetail.html
+++ b/solution-hw1/productdetail.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
   <meta charset="UTF-8">
   <title>Product Detail</title>
-  
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+</head>
+
   <body>
 
     <div class="logo">
-
-      <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="200px" alt="logo"></img>
-      </div>
+      <a href="index.html">
+    <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+  </a>
+    </div>
   
       <hr class="solid">
   
-      <div class="navigation">
-        <br>PRODUCTS
-        <br>CART
-      </div>
+      <nav>
+        <br><a href="index.html">PRODUCTS</a>
+        <br><a href="shoppingcart.html">CART</a>
+      </nav>
 
-      <div class="product"></div>
+      <div class="product">
   
         <h2>Original Cinnamon Roll</h2>
 
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll">
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="600px" alt="original cinnamon roll">
 
         <p>Customize our delicious hand-made cinnamon roll to your liking!</p>
 
