--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
   <meta charset="UTF-8">
   <title>Shopping Cart</title>
-  
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+</head>
   <body>
 
     <div class="logo">
-
-      <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="200px" alt="logo"/>
-      </div>
+      <a href="index.html">
+    <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+  </a>
+    </div>
   
       <hr class="solid">
   
-      <div class="navigation">
-        <br>PRODUCTS
-        <br>CART
-      </div>
+      <nav>
+        <br><a href="index.html">PRODUCTS</a>
+        <br><a href="shoppingcart.html">CART</a>
+      </nav>
 
       <h2>Shopping Cart</h2>
 
       <div class="purchase">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="90px" alt="original cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="200px" alt="original cinnamon roll"/>
         <br>Remove
         <p>
           Original Cinammon Roll 
@@ -35,7 +40,7 @@
       </div>
 
       <div class="purchase">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="90px" alt="double-chocolate cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="200px" alt="double-chocolate cinnamon roll"/>
         <br>Remove
         <p>
           Double Chocolate Cinammon Roll 
@@ -48,6 +53,11 @@
         </p>
         </p>
       </div>
+
+      <hr>
+
+      <p>Total: $29.94</p>
+      <button type="button">Add to Cart</button>
 
 
   </body>
