--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -6,22 +6,29 @@
   <title>Product Gallery</title>
 
   <link href="style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+
 
   </head>
   
   <body>
 
+  <div class="indexgrid">
+
     <div class="logo">
       <a href="index.html">
-    <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+    <img src="..assets/logo/logo-01.svg" width="400px" alt="logo"></img>
   </a>
-    </div>
 
+  
+    </div>
+<div class="linebreak">
     <hr class="solid">
+  </div>
+
+   
 
     <nav>
-      <br><a href="index.html">PRODUCTS</a>
+      <br><a href="index.html" class="navselect">PRODUCTS</a>
       <br><a href="shoppingcart.html">CART</a>
     </nav>
 
@@ -31,26 +38,26 @@
 
       <div class="item"> <a href="productdetail.html"> 
         <a href="productdetail.html">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
+        <img src="..assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
           Original Cinammon Roll 
         </a>
           <br>
-          $2.49
+          <span class="price">$2.49</span>
         </p>
       </div>
 
       <div class="item"> <a href="productdetail.html">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
+        <img src="..assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
           Apple Cinammon Roll 
         </a>
           <br>
-          $3.49
+          <span class="price">$3.49</span>
         </p>
       </div>
 
@@ -62,7 +69,7 @@
           Raisin Cinammon Roll 
         </a>
           <br>
-          $2.99
+          <span class="price">$2.99</span>
         </p>
       </div>
 
@@ -74,7 +81,7 @@
           Walnut Cinammon Roll 
           </a>
           <br>
-          $3.49
+          <span class="price"> $3.49</span>
         </p>
       </div>
 
@@ -86,7 +93,7 @@
           Double-chocolate Cinnamon Roll
         </a>
           <br>
-          $3.49
+          <span class="price">  $3.49 </span>
         </p>
       </div>
 
@@ -96,11 +103,12 @@
         <p>
           <a href="productdetail.html">Strawberry Cinnamon Roll</a>
           <br>
-          $3.99
+          <span class="price"> $3.99 </span>
         </p>
       </div>
 
     </div>
+  </div>
 
   </body>
 </html>
