--- a/solution-hw1/productdetail.html
+++ b/solution-hw1/productdetail.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Product Detail</title>
   <link href="style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+
 </head>
 
   <body>
@@ -16,14 +16,18 @@
   </a>
     </div>
   
+    <div class="linebreak">
       <hr class="solid">
+    </div>
   
       <nav>
-        <br><a href="index.html">PRODUCTS</a>
+        <br><a href="index.html" class="navselect">PRODUCTS</a>
         <br><a href="shoppingcart.html">CART</a>
       </nav>
 
-      <div class="product">
+
+
+      <div class="productdetail">
   
         <h2>Original Cinnamon Roll</h2>
 
@@ -63,7 +67,7 @@
           $2.49
         </p>
 
-        <button type="button">Add to Cart</button>
+        <button type="button" class="button">Add to Cart</button>
 
 
 
