--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Shopping Cart</title>
   <link href="style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  
 </head>
   <body>
 
@@ -15,12 +15,16 @@
   </a>
     </div>
   
+    <div class="linebreak">
       <hr class="solid">
+    </div>
   
       <nav>
         <br><a href="index.html">PRODUCTS</a>
-        <br><a href="shoppingcart.html">CART</a>
+        <br><a href="shoppingcart.html" class="navselect">CART</a>
       </nav>
+
+      <div class="shopcart">
 
       <h2>Shopping Cart</h2>
 
@@ -57,8 +61,8 @@
       <hr>
 
       <p>Total: $29.94</p>
-      <button type="button">Add to Cart</button>
+      <button type="button" class="button">Add to Cart</button>
 
-
+    </div>
   </body>
 </html>
