--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -38,7 +38,7 @@
 
       <div class="item"> <a href="productdetail.html"> 
         <a href="productdetail.html">
-        <img src="..assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
+        <img src=".assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
@@ -50,7 +50,7 @@
       </div>
 
       <div class="item"> <a href="productdetail.html">
-        <img src="..assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
+        <img src=".assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
