--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -16,7 +16,7 @@
 
     <div class="logo">
       <a href="index.html">
-    <img src="..assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+    <img src="assets/logo/logo-01.svg" width="400px" alt="logo"></img>
   </a>
 
   
@@ -38,7 +38,7 @@
 
       <div class="item"> <a href="productdetail.html"> 
         <a href="productdetail.html">
-        <img src=".assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
+        <img src="assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
@@ -50,7 +50,7 @@
       </div>
 
       <div class="item"> <a href="productdetail.html">
-        <img src=".assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
+        <img src="assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
@@ -62,7 +62,7 @@
       </div>
 
       <div class="item"> <a href="productdetail.html">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/raisin-cinnamon-roll.jpg" width="400px" alt="raisin cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/raisin-cinnamon-roll.jpg" width="400px" alt="raisin cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
