--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -16,7 +16,7 @@
 
     <div class="logo">
       <a href="index.html">
-    <img src="assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+    <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/logo/logo-01.svg" width="400px" alt="logo"></img>
   </a>
 
   
@@ -38,7 +38,7 @@
 
       <div class="item"> <a href="productdetail.html"> 
         <a href="productdetail.html">
-        <img src="assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="400px" alt="original cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
@@ -50,7 +50,7 @@
       </div>
 
       <div class="item"> <a href="productdetail.html">
-        <img src="assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/apple-cinnamon-roll.jpg" width="400px" alt="apple cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
@@ -74,7 +74,7 @@
       </div>
 
       <div class="item"> <a href="productdetail.html">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/walnut-cinnamon-roll.jpg" width="400px" alt="walnut cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/walnut-cinnamon-roll.jpg" width="400px" alt="walnut cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
@@ -86,7 +86,7 @@
       </div>
 
       <div class="item"> <a href="productdetail.html">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="400px" alt="double-chocolate cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="400px" alt="double-chocolate cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">
@@ -98,7 +98,7 @@
       </div>
 
       <div class="item"> <a href="productdetail.html">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/strawberry-cinnamon-roll.jpg" width="400px" alt="strawberry cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/strawberry-cinnamon-roll.jpg" width="400px" alt="strawberry cinnamon roll"/>
         </a>
         <p>
           <a href="productdetail.html">Strawberry Cinnamon Roll</a>
