--- a/solution-hw1/productdetail.html
+++ b/solution-hw1/productdetail.html
@@ -10,9 +10,11 @@
 
   <body>
 
+    <div class="indexgrid">
+
     <div class="logo">
       <a href="index.html">
-    <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+    <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/logo/logo-01.svg" width="400px" alt="logo"></img>
   </a>
     </div>
   
@@ -31,7 +33,7 @@
   
         <h2>Original Cinnamon Roll</h2>
 
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="600px" alt="original cinnamon roll">
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="600px" alt="original cinnamon roll">
 
         <p>Customize our delicious hand-made cinnamon roll to your liking!</p>
 
@@ -72,6 +74,8 @@
 
 
       
+    </div>
+
     </div>
 
   </body>
