--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -8,6 +8,7 @@
   
 </head>
   <body>
+    <div class="indexgrid">
 
     <div class="logo">
       <a href="index.html">
@@ -29,7 +30,7 @@
       <h2>Shopping Cart</h2>
 
       <div class="purchase">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="200px" alt="original cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="200px" alt="original cinnamon roll"/>
         <br>Remove
         <p>
           Original Cinammon Roll 
@@ -44,7 +45,7 @@
       </div>
 
       <div class="purchase">
-        <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="200px" alt="double-chocolate cinnamon roll"/>
+        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="200px" alt="double-chocolate cinnamon roll"/>
         <br>Remove
         <p>
           Double Chocolate Cinammon Roll 
@@ -64,5 +65,6 @@
       <button type="button" class="button">Add to Cart</button>
 
     </div>
+  </div>
   </body>
 </html>
