--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -12,7 +12,7 @@
 
     <div class="logo">
       <a href="index.html">
-    <img src="/Users/tasmiahaq/Documents/fall 2023/pui/git/pui-hw-tasmia/assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+    <img src="../assets/logo/logo-01.svg" width="400px" alt="logo"></img>
   </a>
     </div>
   
@@ -30,8 +30,8 @@
       <h2>Shopping Cart</h2>
 
       <div class="purchase">
-        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/original-cinnamon-roll.jpg" width="200px" alt="original cinnamon roll"/>
-        <br>Remove
+        <img src="../assets/products/original-cinnamon-roll.jpg" width="200px" alt="original cinnamon roll"/>
+        <br><span class="remove">Remove</span>
         <p>
           Original Cinammon Roll 
           <br>
@@ -45,8 +45,8 @@
       </div>
 
       <div class="purchase">
-        <img src="/Users/tasmiahaq/Documents/fall2023/pui/assignments/pui-hw-tasmia/assets/products/double-chocolate-cinnamon-roll.jpg" width="200px" alt="double-chocolate cinnamon roll"/>
-        <br>Remove
+        <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200px" alt="double-chocolate cinnamon roll"/>
+        <br><span class="remove">Remove</span>
         <p>
           Double Chocolate Cinammon Roll 
           <br>
