--- a/solution-hw1/productdetail.html
+++ b/solution-hw1/productdetail.html
@@ -14,7 +14,7 @@
 
     <div class="logo">
       <a href="index.html">
-    <img src="../assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+    <img src="../assets/logo/logo-01.svg" width="400" alt="logo"></img>
   </a>
     </div>
   
@@ -33,7 +33,7 @@
   
         <h2>Original Cinnamon Roll</h2>
 
-        <img src="../assets/products/original-cinnamon-roll.jpg" width="600px" alt="original cinnamon roll">
+        <img src="../assets/products/original-cinnamon-roll.jpg" width="600" alt="original cinnamon roll">
 
         <div class="dropdown">
 
@@ -53,6 +53,8 @@
             </select>
         
           </form>
+
+          <br>
 
           <form action="/action_page.php">
             <label for="size">Pack Size:<br></label>
