--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -12,7 +12,7 @@
 
     <div class="logo">
       <a href="index.html">
-    <img src="../assets/logo/logo-01.svg" width="400px" alt="logo"></img>
+    <img src="../assets/logo/logo-01.svg" width="400" alt="logo"></img>
   </a>
     </div>
   
@@ -30,7 +30,7 @@
       <h2>Shopping Cart</h2>
 
       <div class="purchase">
-        <img src="../assets/products/original-cinnamon-roll.jpg" width="200px" alt="original cinnamon roll"/>
+        <img src="../assets/products/original-cinnamon-roll.jpg" width="200" alt="original cinnamon roll"/>
         <br><span class="remove">Remove</span>
         <p>
           Original Cinammon Roll 
@@ -45,7 +45,7 @@
       </div>
 
       <div class="purchase">
-        <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200px" alt="double-chocolate cinnamon roll"/>
+        <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" alt="double-chocolate cinnamon roll"/>
         <br><span class="remove">Remove</span>
         <p>
           Double Chocolate Cinammon Roll 
