--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -16,7 +16,7 @@
 
     <div class="logo">
       <a href="index.html">
-    <img src="../assets/logo/logo-01.svg" width="400" alt="logo"></img>
+    <img src="../assets/logo/logo-01.svg" width="400" alt="logo"/>
   </a>
 
   
@@ -36,7 +36,7 @@
     <div class="products">
       <h2>Our hand-made cinnamon rolls</h2>
 
-      <div class="item"> <a href="productdetail.html"> 
+      <div class="item"> 
         <a href="productdetail.html">
         <img src="../assets/products/original-cinnamon-roll.jpg" width="400" alt="original cinnamon roll"/>
         </a>
