--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -12,7 +12,7 @@
 
     <div class="logo">
       <a href="index.html">
-    <img src="../assets/logo/logo-01.svg" width="400" alt="logo"></img>
+        <img src="../assets/logo/logo-01.svg" width="400" alt="logo"/>
   </a>
     </div>
   
@@ -41,7 +41,7 @@
           <p>
            $2.49
         </p>
-        </p>
+       
       </div>
 
       <div class="purchase">
@@ -56,7 +56,7 @@
           <p>
            $2.49
         </p>
-        </p>
+      
       </div>
 
       <hr>
