--- a/solution-hw1/productdetail.html
+++ b/solution-hw1/productdetail.html
@@ -44,7 +44,7 @@
           <!-- w3 schools -->
 
           <form action="/action_page.php">
-            <label for="glazing:">Glazing:<br></label>
+            <label for="glaze">Glazing:<br></label>
             <select name="glaze" id="glaze">
               <option value="keeporiginal">Keep Original</option>
               <option value="sugarmilk">Sugar Milk</option>
@@ -57,7 +57,7 @@
           <br>
 
           <form action="/action_page.php">
-            <label for="pack-size:">Pack Size:<br></label>
+            <label for="psize">Pack Size:<br></label>
             <select name="psize" id="psize">
               <option value="one">1</option>
               <option value="three">3</option>
@@ -78,7 +78,7 @@
 
         
 
-        <button type="button" class="button"><a href="shoppingcart.html">Add to Cart</a></button>
+        <button type="button" class="button">Add to Cart</button>
 
       
 
