--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -55,7 +55,7 @@
 				</div>
 				<div class="item" id="item5">
 					<a href="productdetail.html"><img alt="double-chocolate cinnamon roll" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="285"></a>
-					<p><a href="productdetail.html">Double-chocolate Cinnamon Roll</a><br>
+					<p><a href="productdetail.html">Double-chocolate<br>Cinnamon Roll</a><br>
 					<span class="price"><a href="productdetail.html">$3.49</a></span></p>
 				</div>
 				<div class="item" id="item6">
