--- a/solution-hw2/shoppingcart.html
+++ b/solution-hw2/shoppingcart.html
@@ -10,21 +10,23 @@
   <body>
     <div class="indexgrid">
 
-    <div class="logo">
-      <a href="index.html">
-        <img src="../assets/logo/logo-01.svg" width="400" alt="logo"/>
-  </a>
-    </div>
+      <div class="navgrid">
+        <div class="logo">
+          <a href="index.html"><img alt="logo" src="../assets/logo/logo-01.svg" width="400"></a>
+        </div>
+        <nav>
+          
+                  <div class="navproduct"><a class="navselect" href="index.html">PRODUCTS</a></div> <div class="navcart"><a href="shoppingcart.html">CART</a></div>
+          
+          <div class="linebreak">
+            <hr>
+          </div>
+          <h2>Our hand-made cinnamon rolls</h2>
+          </nav>
   
-    <div class="linebreak">
-      <hr class="solid">
-    </div>
   
-      <nav>
-        <br><a href="index.html">PRODUCTS</a>
-        <br><a href="shoppingcart.html" class="navselect">CART</a>
-      </nav>
-
+  
+          </div>
       <div class="shopcart">
 
       <h2>Shopping Cart</h2>
