--- a/solution-hw3/productdetail.html
+++ b/solution-hw3/productdetail.html
@@ -35,7 +35,7 @@
                <!-- w3 schools -->
                <form action="/action_page.php">
                   <label for="glaze">Glazing:<br></label>
-                  <select name="glaze" id="glaze">
+                  <select name="glaze" id="glaze" onchange="glazing_change(this)">
              
                   </select>
                </form>
