--- a/solution-hw3/productdetail.html
+++ b/solution-hw3/productdetail.html
@@ -30,7 +30,7 @@
             <img src="../assets/products/original-cinnamon-roll.jpg" width="600" alt="original cinnamon roll"/>
             </div>
            
-            <p class="description">Customize our delicious hand-made cinnamon roll to your liking!</p>
+            <p class="description">Customize our delicious hand-made cinnamon rolls to your liking!</p>
          <div class="dropdown">
                <!-- w3 schools -->
                <form action="/action_page.php">
