--- a/solution-hw4/index.html
+++ b/solution-hw4/index.html
@@ -24,50 +24,50 @@
 
             <div class="products">
                 <div class="item" id="item1">
-                    <a href="productdetail.html"><img alt="original cinnamon roll" src="../assets/products/original-cinnamon-roll.jpg" width="285" /></a>
+                    <a href="productdetail.html?roll=Cinammon"><img alt="original cinnamon roll" src="../assets/products/original-cinnamon-roll.jpg" width="285" /></a>
                     <p>
-                        <a href="productdetail.html">Original Cinammon Roll</a><br />
-                        <span class="price"><a href="productdetail.html">$2.49</a></span>
+                        <a href="productdetail.html?roll=Cinammon">Original Cinammon Roll</a><br />
+                        <span class="price"><a href="productdetail.html?roll=Cinammon">$2.49</a></span>
                     </p>
                 </div>
                 <div class="item" id="item2">
-                    <a href="productdetail.html"><img alt="apple cinnamon roll" src="../assets/products/apple-cinnamon-roll.jpg" width="285" /></a>
+                    <a href="productdetail.html?roll=Apple"><img alt="apple cinnamon roll" src="../assets/products/apple-cinnamon-roll.jpg" width="285" /></a>
                     <p>
-                        <a href="productdetail.html">Apple Cinammon Roll</a><br />
-                        <span class="price"><a href="productdetail.html">$3.49</a></span>
+                        <a href="productdetail.html?roll=Apple">Apple Cinammon Roll</a><br />
+                        <span class="price"><a href="productdetail.html?roll=Apple">$3.49</a></span>
                     </p>
                 </div>
                 <div class="item" id="item3">
-                    <a href="productdetail.html"><img alt="raisin cinnamon roll" src="../assets/products/raisin-cinnamon-roll.jpg" width="285" /></a>
+                    <a href="productdetail.html?roll=Raisin"><img alt="raisin cinnamon roll" src="../assets/products/raisin-cinnamon-roll.jpg" width="285" /></a>
                     <p>
-                        <a href="productdetail.html">Raisin Cinammon Roll</a><br />
-                        <span class="price"><a href="productdetail.html">$2.99</a></span>
+                        <a href="productdetail.html?roll=Raisin">Raisin Cinammon Roll</a><br />
+                        <span class="price"><a href="productdetail.html?roll=Raisin">$2.99</a></span>
                     </p>
                 </div>
 
                 <div class="item" id="item4">
-                    <a href="productdetail.html"><img alt="walnut cinnamon roll" src="../assets/products/walnut-cinnamon-roll.jpg" width="285" /></a>
+                    <a href="productdetail.html?roll=Walnut"><img alt="walnut cinnamon roll" src="../assets/products/walnut-cinnamon-roll.jpg" width="285" /></a>
                     <p>
-                        <a href="productdetail.html">Walnut Cinammon Roll</a><br />
-                        <span class="price"><a href="productdetail.html">$3.49</a></span>
+                        <a href="productdetail.html?roll=Walnut">Walnut Cinammon Roll</a><br />
+                        <span class="price"><a href="productdetail.html?roll=Walnut">$3.49</a></span>
                     </p>
                 </div>
                 <div class="item" id="item5">
-                    <a href="productdetail.html"><img alt="double-chocolate cinnamon roll" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="285" /></a>
+                    <a href="productdetail.html?roll=Double-Chocolate"><img alt="double-chocolate cinnamon roll" src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="285" /></a>
                     <p>
-                        <a href="productdetail.html">
+                        <a href="productdetail.html?roll=Double-Chocolate">
                             Double-chocolate<br />
                             Cinnamon Roll
                         </a>
                         <br />
-                        <span class="price"><a href="productdetail.html">$3.49</a></span>
+                        <span class="price"><a href="productdetail.html?roll=Double-Chocolate">$3.99</a></span>
                     </p>
                 </div>
                 <div class="item" id="item6">
-                    <a href="productdetail.html"><img alt="strawberry cinnamon roll" src="../assets/products/strawberry-cinnamon-roll.jpg" width="285" /></a>
+                    <a href="productdetail.html?roll=Strawberry"><img alt="strawberry cinnamon roll" src="../assets/products/strawberry-cinnamon-roll.jpg" width="285" /></a>
                     <p>
-                        <a href="productdetail.html">Strawberry Cinnamon Roll</a><br />
-                        <span class="price"><a href="productdetail.html">$3.99</a></span>
+                        <a href="productdetail.html?roll=Strawberry">Strawberry Cinnamon Roll</a><br />
+                        <span class="price"><a href="productdetail.html?roll=Strawberry">$3.99</a></span>
                     </p>
                 </div>
             </div>
