--- a/solution-hw4/productdetail.html
+++ b/solution-hw4/productdetail.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <title>Product Detail</title>
       <link href="style.css" rel="stylesheet">
+      <script src="rollsData.js"></script>
       <script src="price.js"></script>
      
    </head>
@@ -21,12 +22,12 @@
                <div class="linebreak">
                   <hr>
                </div>
-               <h2>Original cinnamon roll</h2>
+               <h2 id="productheader">Original cinnamon roll</h2>
             </nav>
          </div>
          <div class="productdetail">
 
-            <div class="productimg">
+            <div class="productimg" id="productimage">
             <img src="../assets/products/original-cinnamon-roll.jpg" width="600" alt="original cinnamon roll"/>
             </div>
            
