--- a/solution-hw4/index.html
+++ b/solution-hw4/index.html
@@ -24,10 +24,10 @@
 
             <div class="products">
                 <div class="item" id="item1">
-                    <a href="productdetail.html?roll=Cinammon"><img alt="original cinnamon roll" src="../assets/products/original-cinnamon-roll.jpg" width="285" /></a>
+                    <a href="productdetail.html"><img alt="original cinnamon roll" src="../assets/products/original-cinnamon-roll.jpg" width="285" /></a>
                     <p>
-                        <a href="productdetail.html?roll=Cinammon">Original Cinammon Roll</a><br />
-                        <span class="price"><a href="productdetail.html?roll=Cinammon">$2.49</a></span>
+                        <a href="productdetail.html">Original Cinammon Roll</a><br />
+                        <span class="price"><a href="productdetail.html">$2.49</a></span>
                     </p>
                 </div>
                 <div class="item" id="item2">
