--- a/puiproject/index.html
+++ b/puiproject/index.html
@@ -13,15 +13,14 @@
     
 </head>
 <body>
-    <!-- Add a canvas element to display the Phaser game within the "game-container" div -->
    
     
-    <div class="container">
+   <main>
 
         <h1>Escape the Museum</h1>
    
     <p>You've woken up in the museum... and now you must escape! Find clues, traverse through the dark, and find your way out! </p>
 
-</div>
+   </main>
 </body>
 </html>
