--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <li><a href="solution-hw5">Homework Assignment 5</a></li>
       <li><a href="solution-hw6">Homework Assignment 6</a></li>
       <li><a href="puiproject/index.html">FINAL</a></li>
+      <li><a href="Out of Time/index.html">GAME</a></li>
+   
     </ul>
 
   </body>
