--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="solution-hw6">Homework Assignment 6</a></li>
       <li><a href="puiproject/index.html">FINAL</a></li>
       <li><a href="Out of Time/index.html">GAME</a></li>
+      <li><a href="Out of Time/game.html">GAME</a></li>
    
     </ul>
 
