--- a/Out of Time/game.html
+++ b/Out of Time/game.html
@@ -84,8 +84,8 @@
         <img src="https://i.ibb.co/CWqW5ZH/Scary.png" alt="Scrapper">
     </div>
     <div class="mood-container">
-        <span class="girl-mood" id="girlMood">Mood: 😊😊😊😊😊</span>
-        <span class="robot-mood" id="robotMood">Mood: 😊😊😊😊😊</span>
+        <span class="girl-mood" id="girlMood">Mood: ❤️❤️❤️❤️❤️</span>
+        <span class="robot-mood" id="robotMood">Mood: ❤️❤️❤️❤️❤️</span>
     </div>
     <div class="button-container">
         <button onclick="playerAction('rock')">Rock</button>
@@ -101,10 +101,10 @@
     let isPlayersTurn = true;
 
     function updateMood() {
-        let girlMoodEmojis = "😊".repeat(girlMood);
-        let robotMoodEmojis = "😊".repeat(robotMood);
-        document.getElementById("girlMood").textContent = "Mood: " + girlMoodEmojis;
-        document.getElementById("robotMood").textContent = "Mood: " + robotMoodEmojis;
+        let girlMoodEmojis = "❤️".repeat(girlMood);
+        let robotMoodEmojis = "❤️".repeat(robotMood);
+        document.getElementById("girlMood").textContent = "Health: " + girlMoodEmojis;
+        document.getElementById("robotMood").textContent = "Health: " + robotMoodEmojis;
     }
 
     function playerAction(action) {
@@ -114,22 +114,26 @@
                     robotMood--;
                     updateMood();
                     endTurn();
+                    checkGameOver(); // Add this line to check game over after player's action
                 }
             } else if (action === 'screwdriver') {
                 if (robotMood >= 2) {
                     robotMood -= 2;
                     updateMood();
                     endTurn();
+                    checkGameOver(); // Add this line to check game over after player's action
                 } else if (robotMood === 1) {
                     robotMood--;
                     updateMood();
                     endTurn();
+                    checkGameOver(); // Add this line to check game over after player's action
                 }
             } else if (action === 'defend') {
                 if (girlMood < 5) {
                     girlMood++;
                     updateMood();
                     endTurn();
+                    checkGameOver(); // Add this line to check game over after player's action
                 }
             }
         }
@@ -138,7 +142,7 @@
     function endTurn() {
         isPlayersTurn = false;
         document.getElementById("turn").textContent = "Scrapper's Turn";
-        setTimeout(scrapperAction, 1000);
+        setTimeout(scrapperAction, 1000); // Set actionText inside the timeout function
     }
 
     function scrapperAction() {
@@ -146,23 +150,39 @@
         if (randomAction < 0.33) {
             // 1/3 chance to emit high-pitched sound
             document.getElementById("actionText").textContent = "Scrapper emits a high-pitched sound! Ouch, your human ears can't take this damage!";
-            girlMood--;
+            setTimeout(() => {
+                girlMood--;
+                updateMood();
+                checkGameOver(); // Add this line to check game over after Scrapper's action
+                resetTurn();
+            }, 1000);
         } else if (randomAction < 0.67) {
             // 1/3 chance to attack the tower
             document.getElementById("actionText").textContent = "Scrapper sends debris flying in your direction.";
-            girlMood -= 2;
+            setTimeout(() => {
+                girlMood -= 2;
+                updateMood();
+                checkGameOver(); // Add this line to check game over after Scrapper's action
+                resetTurn();
+            }, 1000);
         } else {
             // 1/3 chance to upgrade and gain 3 smiley faces
-            if (robotMood <= 0) {
-                document.getElementById("actionText").textContent = "Scrapper cannot be so easily defeated. He powers back on.";
-                robotMood += 3;
+            if (robotMood <= 0 && girlMood > 0) {
+                document.getElementById("actionText").textContent = "Scrapper isn't so easily defeated. He suddenly starts up again.";
+                setTimeout(() => {
+                    robotMood += 3;
+                    updateMood();
+                    setTimeout(resetTurn, 1000);
+                }, 1000);
             } else {
                 document.getElementById("actionText").textContent = "Scrapper upgrades... and suddenly, he's more powerful than before!";
-                robotMood += 3;
+                setTimeout(() => {
+                    robotMood += 3;
+                    updateMood();
+                    resetTurn();
+                }, 1000);
             }
         }
-        updateMood();
-        checkGameOver();
     }
 
     function checkGameOver() {
@@ -170,8 +190,8 @@
             girlMood = 0;
             updateMood();
             alert("Oh no! You have failed. Your mood has been reduced by 1 point.");
+            setTimeout(resetTurn, 2000); // Reset the turn after displaying the game over message
         }
-        setTimeout(resetTurn, 2000);
     }
 
     function resetTurn() {
