--- a/Out of Time/game.html
+++ b/Out of Time/game.html
@@ -84,8 +84,8 @@
         <img src="https://i.ibb.co/CWqW5ZH/Scary.png" alt="Scrapper">
     </div>
     <div class="mood-container">
-        <span class="girl-mood" id="girlMood">Mood: ❤️❤️❤️❤️❤️</span>
-        <span class="robot-mood" id="robotMood">Mood: ❤️❤️❤️❤️❤️</span>
+        <span class="girl-mood" id="girlMood">Health: ❤️❤️❤️❤️❤️</span>
+        <span class="robot-mood" id="robotMood">Health: ❤️❤️❤️❤️❤️</span>
     </div>
     <div class="button-container">
         <button onclick="playerAction('rock')">Rock</button>
