--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="puiproject/index.html">FINAL</a></li>
       <li><a href="Out of Time/index.html">GAME</a></li>
       <li><a href="Out of Time/game.html">GAME</a></li>
+      <li><a href="Out of Time/walking.html">GAME</a></li>
    
     </ul>
 
