--- a/Out of Time/walking.html
+++ b/Out of Time/walking.html
@@ -1,100 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Branch Icon Interaction</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-        }
-        #branchIcon {
-            width: 50px;
-            height: 50px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            cursor: pointer;
-        }
-        #startButton {
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Touch to Vibrate</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
+      font-family: Arial, sans-serif;
+    }
+    .touch-area {
+      width: 80%;
+      height: 80%;
+      background-color: #007bff;
+      border-radius: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 2em;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <button id="startButton">Start</button>
-    <script>
-        let tapCount = 0;
-        let intervals = 0;
-        const maxIntervals = 6;
-        const iconURL = "https://png.pngtree.com/png-vector/20221127/ourmid/pngtree-tree-twig-vector-branch-family-png-image_6480166.png";
+  <div class="touch-area">
+    Touch the screen to vibrate
+  </div>
 
-        function vibrateDevice(pattern) {
-            if (navigator.vibrate) {
-                navigator.vibrate(pattern);
-                console.log("Vibration triggered: ", pattern);
-            } else {
-                console.log("Vibration API not supported on this device.");
-            }
-        }
-
-        function showBranchIcon() {
-            // Create branch icon
-            const branchIcon = document.createElement("img");
-            branchIcon.id = "branchIcon";
-            branchIcon.src = iconURL;
-            document.body.appendChild(branchIcon);
-
-            // Low vibration when the icon appears
-            vibrateDevice(200);
-
-            // Event listener for tapping the icon
-            branchIcon.addEventListener("click", () => {
-                vibrateDevice([50, 100, 50]); // Sharp quick vibration
-                tapCount++;
-                branchIcon.remove();
-            });
-
-            branchIcon.addEventListener("touchstart", () => {
-                vibrateDevice([50, 100, 50]); // Sharp quick vibration
-                tapCount++;
-                branchIcon.remove();
-            });
-
-            // Remove the icon after 2 seconds if not tapped
-            setTimeout(() => {
-                if (document.body.contains(branchIcon)) {
-                    branchIcon.remove();
-                }
-            }, 2000);
-        }
-
-        function intervalFunction() {
-            if (intervals < maxIntervals) {
-                showBranchIcon();
-                intervals++;
-            } else {
-                clearInterval(mainInterval);
-                alert(`You tapped the branch icon ${tapCount} times.`);
-            }
-        }
-
-        document.getElementById("startButton").addEventListener("click", () => {
-            vibrateDevice(200); // Initial vibration
-            document.getElementById("startButton").remove(); // Remove start button
-            // Set interval to run every 20 seconds
-            const mainInterval = setInterval(intervalFunction, 20000);
-            intervalFunction(); // Trigger the first interval immediately
-        });
-    </script>
+  <script>
+    document.querySelector('.touch-area').addEventListener('touchstart', function() {
+      if (navigator.vibrate) {
+        navigator.vibrate(100); // Vibrate for 100 milliseconds
+      }
+    });
+  </script>
 </body>
 </html>
